spec_local/deployment_frapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frapp
  namespace: slot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frapp
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: frapp
    spec:
      containers:
        - name: frapp
          image: YOUR_REGISTRY_NAME/slot_frapp
          ports:
            - containerPort: 80
