spec_local/deployment_gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: slot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: YOUR_REGISTRY_NAME/slot_gateway
          ports:
            - containerPort: 3000
