spec_local/deployment_next_frapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-frapp
  namespace: slot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-frapp
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: next-frapp
    spec:
      containers:
        - name: next-frapp
          image: YOUR_REGISTRY_NAME/slot_next_frapp
          ports:
            - containerPort: 80
