spec_local/deployment_user_management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
  namespace: slot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: user-management
    spec:
      containers:
        - name: user-management
          image: YOUR_REGISTRY_NAME/slot_user_management
          ports:
            - containerPort: 80
