spec_local/service_envoy.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: slot
spec:
  type: NodePort
  selector:
    app: envoy
  ports:
    - nodePort: 30002
      port: 8080
      targetPort: 80
