spec_local/service_frapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: frapp
  namespace: slot
spec:
  type: NodePort
  selector:
    app: frapp
  ports:
    - nodePort: 30001
      port: 8080
      targetPort: 80
