spec_local/service_gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: slot
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - nodePort: 30000
      port: 8080
      targetPort: 3000
