spec_local/service_mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: slot
spec:
  selector:
    app: mongodb
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 27017
