spec_local/service_next_frapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-frapp
  namespace: slot
spec:
  type: NodePort
  selector:
    app: next-frapp
  ports:
    - nodePort: 30003
      port: 8080
      targetPort: 3000
