spec_local/service_task.yaml
apiVersion: v1
kind: Service
metadata:
  name: task
  namespace: slot
spec:
  selector:
    app: task
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
