spec_local/service_user_management.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management
  namespace: slot
spec:
  selector:
    app: user-management
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
